--- a/Project/AAGF/src/app/login/login.component.html
+++ b/Project/AAGF/src/app/login/login.component.html
@@ -2,14 +2,15 @@
     <form class="login">
         <div class="log">
             <div class="inp">
-                <input type="text" class="input" placeholder="Email address">
+                <input [(ngModel)]="email" type="text" class="input" name="email" placeholder="Email address">
                 <br>
-                <input type="text" class="input" placeholder="Password">
+                <input [(ngModel)]="password" type="password" class="input" name="password" placeholder="Password">
                 <br>
             </div>
-            <p class="bot"><input type="checkbox" style="transform:scale(2.0); margin-right: 10px;" >Press checkbox if you are not bot</p>
+            <p class="bot"><input type="checkbox" (click)=checked() style="transform:scale(2.0); margin-right: 10px;">Press checkbox if
+                you are not bot</p>
             <div class="log_btn">
-                <button class="btn" routerLink="/AAGF">Sign in</button>
+                <button class="btn" (click)="check_password()">Sign in</button>
             </div>
         </div>
     </form>
