--- a/Project/AAGF/src/app/site/about-us/about-us.component.html
+++ b/Project/AAGF/src/app/site/about-us/about-us.component.html
@@ -1,9 +1,17 @@
-<div class="nav_bar">
-    <h3 class="nav">
-        <button class="nav_link" routerLink="/AAGF">Home</button>
-        <button class="nav_link" routerLink="/AAGF/games">Games</button>
-        <button class="nav_link" routerLink="/AAGF/films">Films</button>
-        <button class="nav_link" routerLink="/AAGF/about_us">About us</button>
-        <button class="logout" routerLink="/">Logout</button>
-    </h3>
+<div>
+    <div class="nav_bar">
+        <h3 class="nav">
+            <button class="nav_link" routerLink="/AAGF">Home</button>
+            <button class="nav_link" routerLink="/AAGF/games">Games</button>
+            <button class="nav_link" routerLink="/AAGF/films">Films</button>
+            <button class="nav_link" routerLink="/AAGF/about_us">About us</button>
+            <button class="logout" routerLink="/">Logout</button>
+        </h3>
+    </div>
+    <div class=aboutUs>
+        <img src="https://ecsa.me/media/2020/02/13/kbtu-3.jpg" >
+        <p class="text_about_me">
+            Hello! my name is Edige,I'm a student of KBTU
+        </p>
+    </div>
 </div>
