--- a/Project/AAGF/src/app/site/games/games.component.css
+++ b/Project/AAGF/src/app/site/games/games.component.css
@@ -1,16 +1,25 @@
-.nav_bar{
+.container {
+    margin-left: -10px;
+    width: 100%;
+    height: 200vh;
+    padding-right: 15px;
+    background-image: url(https://avatars.mds.yandex.net/get-pdb/2497711/6c900516-953e-4254-837e-1ecb1058419b/s1200);
+}
+
+.nav_bar {
     height: 80px;
-    background-color:rgb(36, 39, 39);
+    background-color: rgb(36, 39, 39);
     position: absolute;
     margin-left: -10px;
     width: 100%;
     padding-right: 10px;
-
 }
-.nav{
+
+.nav {
     margin-left: 20%;
 }
-.nav_link{
+
+.nav_link {
     border-radius: 5px;
     background-color: lightseagreen;
     height: 35px;
@@ -18,33 +27,52 @@
     font-weight: bold;
     margin-left: 30px;
 }
-.logout{
+
+.nav_link:hover {
+    background-color: tomato;
+}
+
+.logout {
     float: right;
     width: 150px;
     height: 45px;
     font-weight: bold;
     border-radius: 20px;
-    background-color:rgb(0, 119, 255);
+    background-color: rgb(0, 119, 255);
 }
-.games_page{
-    position:absolute;
+
+.logout:hover {
+    background-color: violet;
+}
+
+.games_page {
+    position: absolute;
     margin-top: 80px;
     margin-left: -10px;
     padding-right: 10px;
     width: 100%;
 }
-.gamesNav{
+
+.gamesNav {
     position: absolute;
-    margin-left: 85%;
+    margin-left: 80%;
+    width: 20%;
 }
-.gamesButton{
+
+.gamesButton {
     margin-top: 10px;
+    margin-left: 20%;
     border-radius: 10px;
     background-color: rgb(146, 206, 55);
     width: 150px;
     height: 30px;
 }
-.gamesList{
+
+.gamesButton:hover {
+    background-color: tomato;
+}
+
+.gamesList {
     position: absolute;
     margin-left: 10%;
     width: 70%;
