--- a/Project/AAGF/src/app/site/site.component.css
+++ b/Project/AAGF/src/app/site/site.component.css
@@ -18,6 +18,9 @@
     margin-left: 30px;
     font-weight: bold;
 }
+.nav_link:hover{
+    background-color: tomato;
+}
 .logout{
     float: right;
     width: 150px;
