--- a/Project/AAGF/src/app/site/films/films.component.html
+++ b/Project/AAGF/src/app/site/films/films.component.html
@@ -1,9 +1,35 @@
-<div class="nav_bar">
-    <h3 class="nav">
-        <button class="nav_link" routerLink="/AAGF">Home</button>
-        <button class="nav_link" routerLink="/AAGF/games">Games</button>
-        <button class="nav_link" routerLink="/AAGF/films">Films</button>
-        <button class="nav_link" routerLink="/AAGF/about_us">About us</button>
-        <button class="logout" routerLink="/">Logout</button>
-    </h3>
+<div class="container">
+    <div class="nav_bar">
+        <h3 class="nav">
+            <button class="nav_link" routerLink="/AAGF">Home</button>
+            <button class="nav_link" routerLink="/AAGF/games">Games</button>
+            <button class="nav_link" routerLink="/AAGF/films">Films</button>
+            <button class="nav_link" routerLink="/AAGF/about_us">About us</button>
+            <button class="logout" routerLink="/">Logout</button>
+        </h3>
+    </div>
+    <div class="films_page">
+        <div class="filmsList">
+            <table>
+                <tr *ngFor="let films of filmsall; let i = index">
+                    <td>
+                        <img width="200px" src="{{films.fields.link}}" routerLink="{{films.fields.name}}">
+                    </td>
+                    <td>
+                        <h3>{{films.fields.name}}</h3>
+                        <p>{{films.fields.description}}</p>
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <div class="filmsNav">
+            <button (click)="btn_films_boevik()" class="filmsButton">Боевики</button>
+            <br>
+            <button (click)="btn_films_history()" class="filmsButton">Исторические</button>
+            <br>
+            <button (click)="btn_films_documental()" class="filmsButton">Документальные</button>
+            <br>
+            <button (click)="btn_films_comedy()" class="filmsButton">Комедии</button>
+        </div>
+    </div>
 </div>
