--- a/Project/AAGF/src/app/login/login.component.html
+++ b/Project/AAGF/src/app/login/login.component.html
@@ -7,10 +7,10 @@
                 <input [(ngModel)]="password" type="password" class="input" name="password" placeholder="Password">
                 <br>
             </div>
-            <p class="bot"><input type="checkbox" (click)=checked() style="transform:scale(2.0); margin-right: 10px;">Press checkbox if
-                you are not bot</p>
+            <p class="bot"><input type="checkbox" (click)=checked() style="transform:scale(2.0); margin-right: 10px;">Press checkbox if you are not bot</p>
             <div class="log_btn">
-                <button class="btn" (click)="check_password()">Sign in</button>
+                <button class="btn_registration" routerLink="Registration">Registration</button>
+                <button class="btn_signin" (click)="check_password()">Sign in</button>
             </div>
         </div>
     </form>
